[FIX] Session post handler
